Fix: drag n drop invisible when dragging

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -106,7 +106,7 @@ form .form-actions {
   }
 }
 .js-enabled .sortable {
-    [class*="sort"] {
+    [class*="_sort"] {
       display: none;
     }
 }
